<resources>
    <string name="app_name">ReiDoFifa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reidofifa">REIdoFIFA</string>
    <string name="sign_up_or_login">Sign up or Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="enter_e_mail">Enter e-mail, name and password to register</string>
    <string name="enter_e_mail_sign_in">Enter e-mail and password to sign in</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="image_contentDescription">image</string>
    <string name="sign_in">SIGN IN</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="update">UPDATE</string>
    <string name="save_game">SAVE GAME</string>
    <string name="floating_action_button">floating action button</string>
</resources>