<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.SignInActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_e_mail_sign_in"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/margin_top_register"
            android:layout_marginHorizontal="@dimen/margin_horizontal_btn"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_btn"
            android:elevation="@dimen/elevation_register_card"
            android:padding="@dimen/padding_email_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_horizontal_btn"
                    android:layout_marginVertical="@dimen/margin_horizontal_btn"
                    android:hint="@string/e_mail"
                    android:padding="@dimen/padding_email_register"
                    android:textSize="@dimen/register_email_size"
                    android:inputType="textEmailAddress"
                    app:layout_constraintBottom_toTopOf="@+id/et_password_sign_in"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_horizontal_btn"
                    android:layout_marginBottom="@dimen/margin_horizontal_btn"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/register_email_size"
                    app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_horizontal_btn"
                    android:layout_marginBottom="24dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:background="@drawable/shape_button_rounded"
                    android:text="@string/sign_in"
                    android:textSize="@dimen/sign_up_btn_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>